Fixing an issue with excess spacing in key gen
BREAKING CHANGE: Generated keys will now have excess spacing stripped
during generation to make more meaningful keys.

--- a/src/Localization/Localization/Views/Home/Index.cshtml
+++ b/src/Localization/Localization/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
                         <tr>
                             <th>Header A</th>
                             <th>Header B</th>
-                            <th>Header C</th>
+                            <th>Header C                                        asdf                                   asdf</th>
                         </tr>
                     </thead>
                 </table>)
